39-SSL-en-Kubernetes/ejemplo-certmanager.yaml
# Script realizado con Amor por:
# Alejandro Martinez Capilla
apiVersion: v1
kind: Namespace
metadata:
  name: gatos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gatos
  name: gatos-deployment
  namespace: gatos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gatos
  template:
    metadata:
      labels:
        app: gatos
    spec:
      containers:
      - image: httpd:latest
        name: gatos
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
        volumeMounts:
        - mountPath: /usr/local/apache2/htdocs
          name: gatos
      volumes:
      - name: gatos
        configMap:
          name: gatos-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gatos
  name: gatos-service
  namespace: gatos
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: gatos
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: "issuer" # aqui hay que añadir o bien cert-manager.io/issuer o certmanager.io/cluster-issuer , y el nombre del objeto.
  labels:
    app: gatos
  name: gatos-ingress
  namespace: gatos
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.isistotoro.com
    http:
      paths:
      - backend:
          service:
            name: gatos-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ingress.isistotoro.com
    secretName: gatos-secret
