39-SSL-en-Kubernetes/ejemplo-manual.yaml
# Script realizado con Amor por:
# Alejandro Martinez Capilla
apiVersion: v1
kind: Namespace
metadata:
  name: webpatata
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webpatata
  name: webpatata
  namespace: webpatata
spec:
  selector:
    matchLabels:
      app: webpatata
  template:
    metadata:
      labels:
        app: webpatata
    spec:
      containers:
      - image: httpd:latest
        name: webpatata
        volumeMounts:
        - mountPath: /usr/local/apache2/htdocs
          name: webpatata
      volumes:
      - name: webpatata
        configMap:
          name: webpatata
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webpatata
  name: webpatata
  namespace: webpatata
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webpatata
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: webpatata
  name: webpatata
  namespace: webpatata
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.soyunapatata.com
    http:
      paths:
      - backend:
          service:
            name: webpatata
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ingress.soyunapatata.com
    secretName: webpatata
